--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="bg-success text-center p-3">
+        <span class="mb-0 h1">↠ Get Fat or Die Trying ↞</span>
+    </nav>
+
     <div id="app"></div>
 
     <!-- Liens script -->
